Fixed vertical heading alignment in how to cite

--- a/src/App.css
+++ b/src/App.css
@@ -314,8 +314,7 @@ hr {
 }
 
 .vert-head-logo-container {
-	/* padding: 0 50px 0 90px !important; */
-	padding: 0 3% 0 7% !important;
+	padding: 0 11% !important;
 }
 
 /* =========================================
